--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.App2 {
+  text-align: center;
+  border: "5px solid #1a202c";
+  padding: "8px";
+  min-width: "32px";
+  max-width: "512px";
+  background: "transparent";
+  transition: "all 0.1s ease-in";
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,7 +24,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: pink;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
